# renegl

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
src/: frag.glsl  main.cpp  main.rs  vert.glsl
src/shaders/: frag.glsl  vert.glsl
